--- a/Views/about.html
+++ b/Views/about.html
@@ -14,7 +14,7 @@
 
 
   <!-- Favicon -->
-    <link rel="icon" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Favicon.png">
+    <link rel="icon" href="../Images/Favicon.png">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
 
-      <img class="navbar-brand" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Logo 2.png" alt="Company Logo">
+      <img class="navbar-brand" src="../Images/logo-2.png" alt="Company Logo">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
