--- a/Views/contact.html
+++ b/Views/contact.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Blue Brew</title>
 
     <link rel="stylesheet" href="../CSS/styles.css">
@@ -34,19 +37,19 @@
       <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\index.html">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\about.html">ABOUT</a>
+            <a class="nav-link" href="about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\event.html">EVENT HIRE</a>
+            <a class="nav-link" href="event.html">EVENT HIRE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\orders.html">CLICK & COLLECT</a>
+            <a class="nav-link" href="menu.html">MENU</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\blog.html">BLOG</a>
+            <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item active">
             <a class="home-link nav-link" href="#">CONTACT US</a>
@@ -60,7 +63,6 @@
 
 <div class="page-text">
       <h2>Contact Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
     <div class="card-deck">
       <div class="card">
@@ -69,7 +71,7 @@
           <i class="fas fa-map-marker-alt fa-3x"></i>
           </span>
           <h5 class="card-title">Location</h5>
-          <p class="card-text">Please refer to our social media pages for the most up-to-date location</p>
+          <p class="card-text">We are based in West Sussex, England. Our precise location varies, so please refer to our social media pages for the most up-to-date location.</p>
         </div>
       </div>
       <div class="card">
@@ -79,7 +81,7 @@
           <i class="fas fa-envelope fa-3x"></i>
           </span>
           <h5 class="card-title">Email</h5>
-          <p class="card-text">bluebrew2019@outlook.com</p>
+          <p class="card-text">bluebrew2019 <br> @outlook.com</p>
         </div>
       </div>
       <div class="card">
@@ -105,6 +107,8 @@
 
     <br>
 
+<strong><p>Any feedback / questions? <br> Feel free to drop us a message below.</p></strong>
+
 <form>
   <div class="row">
   <div class="col form-group">
@@ -117,8 +121,8 @@
   </div>
   </div>
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Enquiry</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="What would you like to ask us?"></textarea>
+    <label for="exampleFormControlTextarea1">Feedback / Enquiry</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Let us know your thoughts or ask us a question."></textarea>
   </div>
   <small id="emailHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
   <br>
@@ -133,8 +137,7 @@
 
     <div class="footer">
 
-  <div class="footer-display">
-    <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+  <div class="contact-footer footer-display">
 
   <br>
 
