--- a/Views/menu.html
+++ b/Views/menu.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Blue Brew</title>
 
     <link rel="stylesheet" href="../CSS/styles.css">
@@ -34,22 +37,22 @@
       <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\index.html">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\about.html">ABOUT</a>
+            <a class="nav-link" href="about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\event.html">EVENT HIRE</a>
+            <a class="nav-link" href="event.html">EVENT HIRE</a>
           </li>
           <li class="nav-item active">
-            <a class="home-link nav-link" href="#">CLICK & COLLECT</a>
+            <a class="home-link nav-link" href="#">MENU</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\blog.html">BLOG</a>
+            <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\contact.html">CONTACT US</a>
+            <a class="nav-link" href="contact.html">CONTACT US</a>
           </li>
         </ul>
 
@@ -59,42 +62,30 @@
     <div class="page-body">
 
 <div class="page-text">
-      <h2>Click & Collect</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>Menu</h2>
+    <p>We have a wide range of hot drinks, cakes and snacks. <br> <br> Pre-order is available for our cakes & snacks selection. Please email us in advance and we'll reserve a cake of your choice! <br> <br> **Please check our social media pages for cut-off times**</p>
+
+<div class="call-to-action">
+<a href="contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Pre-Order</a>
+</div>
 
 <br>
-<div class="row row-cols-1 row-cols-md-2">
-  <div class="col mb-4">
-    <div class="card">
-      <img class="order-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Drinks.PNG" class="card-img-top" alt="Drinks">
-      <div class="card-body">
-        <h5 class="card-title">Drinks</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-      </div>
-    </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card">
-      <img class="order-img" src="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Images\Cakes.PNG" class="card-img-top" alt="Cakes">
-      <div class="card-body">
-        <h5 class="card-title">Cakes</h5>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </div>
-    </div>
-  </div>
+
+<div class="product-buttons">
+  <div class="drinks">
+<button class="drinks-btn" type="button" name="button"> <h2 class="drinks-title" >Hot Drinks</h2> </button>
+</div>
+<div class="cakes">
+<button class="cakes-btn" type="button" name="button"> <h2 class="cakes-title" >Cakes & Snacks</h2></button>
 </div>
 </div>
-    </div>
-
-
-<div class="page-breaks">
-
+</div>
 </div>
 
     <div class="footer">
 
   <div class="footer-display">
-    <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+    <a href="contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 
   <br>
 
