--- a/Views/event.html
+++ b/Views/event.html
@@ -2,6 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Blue Brew</title>
 
     <link rel="stylesheet" href="../CSS/styles.css">
@@ -21,6 +24,7 @@
 
 
   </head>
+
   <body>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;" >
@@ -34,22 +38,22 @@
       <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\index.html">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\about.html">ABOUT</a>
+            <a class="nav-link" href="about.html">ABOUT</a>
           </li>
           <li class="nav-item active">
             <a class="home-link nav-link" href="#">EVENT HIRE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\orders.html">CLICK & COLLECT</a>
+            <a class="nav-link" href="menu.html">MENU</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\blog.html">BLOG</a>
+            <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="C:\Users\louis\Google Drive\Web Development\Freelancing\Projects\Blue Brew\Website\Views\contact.html">CONTACT US</a>
+          <a class="nav-link" href="contact.html">CONTACT US</a>
           </li>
         </ul>
 
@@ -60,7 +64,7 @@
 
 <div class="page-text">
   <h2>Event Hire</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Blue Brew is available for private hire. Please fill out the form below with your details and we'll get back to you as soon as possible.</p>
   <form>
 
 
@@ -115,7 +119,7 @@
     <div class="footer">
 
   <div class="footer-display">
-    <a href="#" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
+    <a href="contact.html" role="button" class="btn btn-lg active" aria-pressed="true" style="background-color: #E91E63; color: #fff; font-weight: bold">Get in Touch!</a>
 
   <br>
 
