--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,9 @@
 
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <title>Blue Brew</title>
+      <meta name="description" content="Takeaway coffee van based in West Sussex, England. We are continuing to operate through the COVID-19 lockdown.">
+
+      <title>Blue Brew | Takeaway Coffee Van</title>
 
       <link rel="stylesheet" href="/CSS/styles.css">
 
@@ -24,37 +26,66 @@
       <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
 
       <!-- Navigation Bar -->
-
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #72A3B3;">
 
-        <img class="navbar-brand" src="/Images/logo-2.png" alt="Company Logo">
+        <img class="navbar-brand" src="../Images/logo-2.png" alt="Company Logo">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="nav-links collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="nav-links collapse navbar-collapse text-left" id="navbarTogglerDemo02">
 
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <ul class="navbar-nav ml-auto">
 
             <li class="nav-item">
-              <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+              <a class=" nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/eventhire">EVENT HIRE</a>
+              <a class="nav-link" href="/gallery">GALLERY</a>
+            </li>
+            <div class="menu-align">
+
+
+
+            <li class="nav-item dropdown menu-div">
+
+            <a class="nav-link menu-nav" href="/menu" role="button">
+              MENU
+            </a>
+            <a class="nav-link dropdown-toggle dropdown-toggle-split menu-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only">Toggle Dropdown</span>
+            </a>
+
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/drinks">DRINKS</a>
+              <a class="dropdown-item" href="/cakes">CAKES</a>
+              </div>
+
+          </li>
+          </div>
+
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="/testimonials">TESTIMONIALS</a>
+            </li> -->
+            <li class="nav-item blog-nav">
+              <a class="nav-link" href="/blog">BLOG</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/menu">MENU</a>
-            </li>
-            <li class="nav-item active">
-              <a class="home-link nav-link" href="/blog">BLOG</a>
+              <a class="nav-link" href="/eventhire">EVENT HIRE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact">CONTACT US</a>
             </li>
+            <li class="nav-item">
+              <a href="https://www.facebook.com/bluebrew2019" target="_blank"><i class="social-icons-navbar fab fa-facebook-square fa-1x"></i></a>
+              <a href="https://www.instagram.com/bluebrew2019/" target="_blank"><i class="social-icons-navbar fab fa-instagram fa-1x"></i></a>
+            </li>
+
+
 
           </ul>
           </div>
@@ -63,5 +94,9 @@
       </nav>
 
     <body>
+
+<section id="page-backgrounds">
+
+
 
       <div class="blog-content">
